@@ -84,10 +84,14 @@ operator|new
 name|TermBuffer
 argument_list|()
 decl_stmt|;
-DECL|field|scratch
+DECL|field|scanBuffer
 specifier|private
 name|TermBuffer
-name|scratch
+name|scanBuffer
+init|=
+operator|new
+name|TermBuffer
+argument_list|()
 decl_stmt|;
 comment|// used for scanning
 DECL|field|termInfo
@@ -390,9 +394,11 @@ argument_list|()
 expr_stmt|;
 name|clone
 operator|.
-name|scratch
+name|scanBuffer
 operator|=
-literal|null
+operator|new
+name|TermBuffer
+argument_list|()
 expr_stmt|;
 return|return
 name|clone
@@ -616,19 +622,7 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-if|if
-condition|(
-name|scratch
-operator|==
-literal|null
-condition|)
-name|scratch
-operator|=
-operator|new
-name|TermBuffer
-argument_list|()
-expr_stmt|;
-name|scratch
+name|scanBuffer
 operator|.
 name|set
 argument_list|(
@@ -637,7 +631,7 @@ argument_list|)
 expr_stmt|;
 while|while
 condition|(
-name|scratch
+name|scanBuffer
 operator|.
 name|compareTo
 argument_list|(
